examples/test/testpolicy11291.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11291
  namespace: namespace80
spec:
  podSelector:
    matchLabels:
      key19: value2
      key46: value0
      key13: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value37
      podSelector:
        matchLabels:
          key16: value9
